--- a/data/events.yml
+++ b/data/events.yml
@@ -44,7 +44,7 @@
       name: "CeBIT"
       url:  "http://cebit.de"
     - 
-      date: "13-17.2.2012"
+      date: "13.2.2012-17.2.2012"
       name: "Social Media Week Hamburg"
       url:  "http://socialmediaweek.org/hamburg"
     - 
@@ -52,7 +52,7 @@
       name: "Social Media Club Hamburg - 'Is your Facebook fan page worth anything?'"
       url:  "https://www.xing.com/events/smchh-ladt-thema-is-your-facebook-fan-page-worth-anything-26-01-2012-857892"
     - 
-      date: "11-12.11.2011"
+      date: "11.12.2011 - 12.12.2011"
       name: "Barcamp Hamburg - Otto Versand"
       url:  "http://www.barcamp-hamburg.de"
     - 
@@ -60,7 +60,7 @@
       name: "Social Media Club Hamburg - 'Social Media und die Musik'"
       url:  "https://www.xing.com/events/social-media-club-hamburg-event-03-11-2011-social-media-musik-830687"
     - 
-      date: "29-30.10.2011"
+      date: "29.10.2011 - 30.10.2011"
       name: "Railscamp Hamburg"
       url:  "http://railscamp-hamburg.de"
     - 
