Impressum about styles social media links

--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "private": "true",
   "dependencies": {
-    "foundation": "zurb/bower-foundation"
+    "foundation": "zurb/bower-foundation",
+    "font-awesome": "~4.0.0"
   }
 }
